Changelog
=========


2.0 (unreleased)
----------------

- Use plone default classes for table styling.
  [Julian Infanger]

- Fixed response content-type in inbound view.
  [lknoepfel]

- Revoke "ftw.mail: Add Mail" permission.
  This permission makes the "mail" type show up in the add menu.
  Only admins (Manager) should be able to add new mails through the
  add menu, the normal use case is sending the mails via inbound.
  Also change the lawgiver hint to ingnore this permission.
  [jone]

- Add ftw.lawgiver support.
  [mathias.leimgruber]

- Add mail tab for ftw.workspace.
  [mathias.leimgruber]

- Implement mail-in as viewlet.
  [mathias.leimgruber]

- Add readme.
  [mathias.leimgruber]

- Add IEmailAddress adapter, so it's easy to change the behavior of generating
  the email address of a destination and getting the destination of a given
  email address.(Dropped the destination resolver)
  [mathias.leimgruber]

- Add uuid support and drop intid.
  [mathias.leimgruber]

- Use view.pt for mail content type's default view.
  [mathias.leimgruber]

- Ungrock the package.
  [mathias.leimgruber]

- Fix test setup for plone 4.3 and intid.
  [mathias.leimgruber]

- Add plone 4.3.x tests cfg and development.cfg.
  [mathias.leimgruber]


1.0.4 (2012-09-12)
------------------

- Set default values on all fields in the inbound mail creation.
  Issue #222 Metadaten Standort und Sprache
  https://extranet.4teamwork.ch/support/ph-vs/tracker/222/
  [philippegross]


1.0.3 (2012-06-18)
------------------

- Fixed BeautifulSoup related encoding bug when unwrapping html body.
  [lgraf]

- Fix filename encoding handling.
  [jone]


1.0.2 (2012-03-28)
------------------

- Inbound mail: Get recipient from env variable set by MTA, not from To header.
  This allows for mails with multiple recipients in the To header, and the
  Plone destination address doesn't need to be listed first anymore.
  Issue #1312 Fehler E-Mail mit mehreren Adressaten