@@ -55,22 +55,26 @@ class MailsTab(listing.CatalogListingView):
         {'column': 'From',
          'column_title': _(u'label_mailstab_from',
                            default=u'From'),
-         'transform': get_mail_header(field='From')},
+         'transform': get_mail_header(field='From'),
+         'sortable': False},
 
         {'column': 'To',
          'column_title': _(u'label_mailstab_to',
                            default=u'To'),
-         'transform': get_mail_header(field='To')},
+         'transform': get_mail_header(field='To'),
+         'sortable': False},
 
         {'column': 'Date',
          'column_title': _(u'label_mailstab_date',
                            default=u'Date Received'),
-         'transform': get_mail_header(field='Date', isdate=True)},
+         'transform': get_mail_header(field='Date', isdate=True),
+         'sortable': False},
 
         {'column': 'Attachments',
          'column_title': _(u'label_mailstab_attachments',
                            default=u'Attachments'),
-         'transform': get_mail_header(field='attachments')},
+         'transform': get_mail_header(field='attachments'),
+         'sortable': False},
 
         {'column': 'Creator',
          'column_title': _(u'label_mailstab_creator',
